--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.keeganlee.kandroid.activity.LoginActivity">
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/cat"
+        android:layout_gravity="center_horizontal"
+        />
     <EditText
         android:id="@+id/edit_phone"
         android:layout_width="match_parent"
